// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`load > should parse a nango.yaml file that is version 1 as expected 1`] = `
{
  "integrations": [
    {
      "actions": [
        {
          "description": "",
          "endpoint": null,
          "input": null,
          "name": "github-write-action",
          "output": [
            "Anonymous_demogithubintegration_sync_githubwriteaction_output",
          ],
          "scopes": [],
          "type": "action",
          "usedModels": [
            "Anonymous_demogithubintegration_sync_githubwriteaction_output",
          ],
          "version": "",
        },
      ],
      "onEventScripts": {
        "post-connection-creation": [],
        "pre-connection-deletion": [],
      },
      "providerConfigKey": "demo-github-integration",
      "syncs": [
        {
          "auto_start": true,
          "description": "",
          "endpoints": [],
          "input": null,
          "name": "github-issue-example",
          "output": [
            "GithubIssue",
          ],
          "runs": "every half hour",
          "scopes": [],
          "sync_type": "incremental",
          "track_deletes": false,
          "type": "sync",
          "usedModels": [
            "GithubIssue",
          ],
          "version": "",
          "webhookSubscriptions": [],
        },
      ],
    },
  ],
  "models": Map {
    "GithubIssue" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubIssue",
    },
    "Anonymous_demogithubintegration_sync_githubwriteaction_output" => {
      "fields": [
        {
          "array": false,
          "name": "output",
          "optional": false,
          "tsType": true,
          "value": "boolean",
        },
      ],
      "isAnon": true,
      "name": "Anonymous_demogithubintegration_sync_githubwriteaction_output",
    },
  },
  "yamlVersion": "v1",
}
`;

exports[`load > should parse a nango.yaml file that is version 2 as expected 1`] = `
{
  "integrations": [
    {
      "actions": [
        {
          "description": "Get a GitHub issue.",
          "endpoint": {
            "method": "GET",
            "path": "/ticketing/tickets/{GithubCreateIssueInput:id}",
          },
          "input": null,
          "name": "github-get-issue",
          "output": [
            "GithubIssueAction",
          ],
          "scopes": [
            "repo:read",
          ],
          "type": "action",
          "usedModels": [
            "GithubIssueAction",
          ],
          "version": "",
        },
        {
          "description": "Creates a GitHub issue.",
          "endpoint": {
            "method": "POST",
            "path": "/ticketing/tickets",
          },
          "input": "GithubCreateIssueInput",
          "name": "github-create-issue",
          "output": [
            "GithubCreateOutput",
          ],
          "scopes": [
            "repo:write",
          ],
          "type": "action",
          "usedModels": [
            "GithubCreateOutput",
            "GithubIssue",
            "GithubCreateIssueInput",
          ],
          "version": "",
        },
        {
          "description": "Deletes a GitHub issue.",
          "endpoint": {
            "method": "DELETE",
            "path": "/ticketing/tickets/{GithubIssue:id}",
          },
          "input": null,
          "name": "github-delete-issue",
          "output": [
            "Anonymous_demogithubintegration_action_githubdeleteissue_output",
          ],
          "scopes": [
            "repo:write",
          ],
          "type": "action",
          "usedModels": [
            "Anonymous_demogithubintegration_action_githubdeleteissue_output",
          ],
          "version": "",
        },
      ],
      "onEventScripts": {
        "post-connection-creation": [],
        "pre-connection-deletion": [],
      },
      "providerConfigKey": "demo-github-integration",
      "syncs": [
        {
          "auto_start": true,
          "description": "Sync github issues continuously from public repos",
          "endpoints": [
            {
              "method": "GET",
              "path": "/ticketing/tickets",
            },
          ],
          "input": null,
          "name": "github-issue-example",
          "output": [
            "GithubIssue",
          ],
          "runs": "every half hour",
          "scopes": [
            "public_repo",
          ],
          "sync_type": "incremental",
          "track_deletes": false,
          "type": "sync",
          "usedModels": [
            "GithubIssue",
          ],
          "version": "",
          "webhookSubscriptions": [
            "issue.creation",
          ],
        },
        {
          "auto_start": true,
          "description": "Sync github issues continuously from public repos example two",
          "endpoints": [
            {
              "method": "GET",
              "path": "/ticketing/tickets-two",
            },
          ],
          "input": null,
          "name": "github-issue-example-two",
          "output": [
            "GithubIssue2",
          ],
          "runs": "every hour",
          "scopes": [
            "public_repo",
          ],
          "sync_type": "incremental",
          "track_deletes": false,
          "type": "sync",
          "usedModels": [
            "GithubIssue2",
          ],
          "version": "",
          "webhookSubscriptions": [],
        },
        {
          "auto_start": true,
          "description": "Sync github issues to multiple models",
          "endpoints": [
            {
              "method": "GET",
              "path": "/ticketing/ticket",
            },
            {
              "method": "GET",
              "path": "/ticketing/pr",
            },
          ],
          "input": null,
          "name": "github-multiple-models",
          "output": [
            "GithubIssue3",
            "GithubPR",
          ],
          "runs": "every 5 minutes",
          "scopes": [],
          "sync_type": "full",
          "track_deletes": false,
          "type": "sync",
          "usedModels": [
            "GithubIssue3",
            "GithubPR",
          ],
          "version": "",
          "webhookSubscriptions": [],
        },
      ],
    },
  ],
  "models": Map {
    "GithubIssue" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubIssue",
    },
    "GithubIssueAction" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubIssueAction",
    },
    "GithubIssue2" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubIssue2",
    },
    "GithubIssue3" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubIssue3",
    },
    "GithubCreateIssueInput" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubCreateIssueInput",
    },
    "GithubCreateOutput" => {
      "fields": [
        {
          "array": false,
          "model": true,
          "name": "result",
          "optional": false,
          "value": "GithubIssue",
        },
      ],
      "name": "GithubCreateOutput",
    },
    "GithubPR" => {
      "fields": [
        {
          "array": false,
          "name": "id",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "owner",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "repo",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "issue_number",
          "optional": false,
          "tsType": true,
          "value": "number",
        },
        {
          "array": false,
          "name": "title",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "author_id",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "state",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
        {
          "array": false,
          "name": "date_created",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "date_last_modified",
          "optional": false,
          "tsType": true,
          "value": "Date",
        },
        {
          "array": false,
          "name": "body",
          "optional": false,
          "tsType": true,
          "value": "string",
        },
      ],
      "name": "GithubPR",
    },
    "Anonymous_demogithubintegration_action_githubdeleteissue_output" => {
      "fields": [
        {
          "array": false,
          "name": "output",
          "optional": false,
          "tsType": true,
          "value": "boolean",
        },
      ],
      "isAnon": true,
      "name": "Anonymous_demogithubintegration_action_githubdeleteissue_output",
    },
  },
  "yamlVersion": "v2",
}
`;
